// Vitest Snapshot v1

exports[`button > should work with \`size\` prop 1`] = `
"<button class=\\"eu-button  bg-default eu-button--xs text-black\\">
  <!---->
  <!----><span>xs</span>
</button>"
`;

exports[`button > should work with \`size\` prop 2`] = `
"<button class=\\"eu-button  bg-default eu-button--sm text-black\\">
  <!---->
  <!----><span>sm</span>
</button>"
`;

exports[`button > should work with \`size\` prop 3`] = `
"<button class=\\"eu-button  bg-default eu-button--md text-black\\">
  <!---->
  <!----><span>md</span>
</button>"
`;

exports[`button > should work with \`size\` prop 4`] = `
"<button class=\\"eu-button  bg-default eu-button--lg text-black\\">
  <!---->
  <!----><span>lg</span>
</button>"
`;

exports[`button > should work with \`size\` prop 5`] = `
"<button class=\\"eu-button  bg-default eu-button--xl text-black\\">
  <!---->
  <!----><span>xl</span>
</button>"
`;

exports[`button > should work with \`type\` prop 1`] = `
"<button class=\\"eu-button  bg-default eu-button--md text-black\\">
  <!---->
  <!----><span>default</span>
</button>"
`;

exports[`button > should work with \`type\` prop 2`] = `
"<button class=\\"eu-button  bg-text eu-button--md text-white\\">
  <!---->
  <!----><span>text</span>
</button>"
`;

exports[`button > should work with \`type\` prop 3`] = `
"<button class=\\"eu-button  bg-primary eu-button--md text-white\\">
  <!---->
  <!----><span>primary</span>
</button>"
`;

exports[`button > should work with \`type\` prop 4`] = `
"<button class=\\"eu-button  bg-info eu-button--md text-white\\">
  <!---->
  <!----><span>info</span>
</button>"
`;

exports[`button > should work with \`type\` prop 5`] = `
"<button class=\\"eu-button  bg-success eu-button--md text-white\\">
  <!---->
  <!----><span>success</span>
</button>"
`;

exports[`button > should work with \`type\` prop 6`] = `
"<button class=\\"eu-button  bg-warning eu-button--md text-white\\">
  <!---->
  <!----><span>warning</span>
</button>"
`;

exports[`button > should work with \`type\` prop 7`] = `
"<button class=\\"eu-button  bg-error eu-button--md text-white\\">
  <!---->
  <!----><span>error</span>
</button>"
`;

exports[`button > should work with \`type\` prop 8`] = `
"<button class=\\"eu-button  bg-purple eu-button--md text-white\\">
  <!---->
  <!----><span>purple</span>
</button>"
`;
